--- a/app/Resources/public/less/etraxis-panel.less
+++ b/app/Resources/public/less/etraxis-panel.less
@@ -26,6 +26,11 @@
         margin: 0;
         padding: 5px 0;
 
+        p {
+            margin-left: 20px;
+            padding: 5px 10px;
+        }
+
         a {
             display: block;
             padding: 5px 10px;
