Panel jQuery UI widget (highlighting)

--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -124,3 +124,15 @@ table.dataTable {
 .panel .panel-body a:hover {
     background-color: #222;
 }
+
+/* Panels */
+
+.panel {
+
+    .panel-body {
+
+        a.highlighted {
+            color: #ff6247;
+        }
+    }
+}
