--- a/app/Resources/public/less/themes/theme-mars.less
+++ b/app/Resources/public/less/themes/theme-mars.less
@@ -64,3 +64,15 @@ table.dataTable {
         color: #d0d0d0 !important;
     }
 }
+
+/* Panels */
+
+.panel {
+
+    .panel-body {
+
+        a.highlighted {
+            color: #dc322f;
+        }
+    }
+}
