--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -64,3 +64,15 @@ table.dataTable {
         background-color: #dcd3c3;
     }
 }
+
+/* Panels */
+
+.panel {
+
+    .panel-body {
+
+        a.highlighted {
+            color: #dc322f;
+        }
+    }
+}
