--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -77,3 +77,15 @@ table.dataTable {
         }
     }
 }
+
+/* Panels */
+
+.panel {
+
+    .panel-body {
+
+        a.highlighted {
+            color: #dc322f;
+        }
+    }
+}
