Panel jQuery UI widget (multiple sections)

--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -134,5 +134,9 @@ table.dataTable {
         a.highlighted {
             color: #ff6247;
         }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid #444444;
+        }
     }
 }
