--- a/app/Resources/public/less/themes/theme-azure.less
+++ b/app/Resources/public/less/themes/theme-azure.less
@@ -78,5 +78,9 @@ table.dataTable {
         a.highlighted {
             color: #dc322f;
         }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid #d3d3d3;
+        }
     }
 }
