--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -74,5 +74,9 @@ table.dataTable {
         a.highlighted {
             color: #dc322f;
         }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid #cdc3b7;
+        }
     }
 }
