--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -87,5 +87,9 @@ table.dataTable {
         a.highlighted {
             color: #dc322f;
         }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid #e8e8e8;
+        }
     }
 }
