--- a/app/Resources/public/less/themes/theme-emerald.less
+++ b/app/Resources/public/less/themes/theme-emerald.less
@@ -74,5 +74,9 @@ table.dataTable {
         a.highlighted {
             color: #dc322f;
         }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid #c0c0c0;
+        }
     }
 }
