--- a/app/Resources/views/admin/templates/view.html.twig
+++ b/app/Resources/views/admin/templates/view.html.twig
@@ -1,5 +1,6 @@
 <div class="tabs" id="tabs-template" data-tab="{{ tab }}">
     <ul>
         <li><a href="{{ path('admin_tab_template_details', {'id': template.id}) }}">{{ 'template'|trans }}</a></li>
+        <li><a href="{{ path('admin_tab_template_permissions', {'id': template.id}) }}">{{ 'permissions'|trans }}</a></li>
     </ul>
 </div>
