--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -97,7 +97,7 @@
             // "Create" button.
             $('#btn-create').click(function() {
                 eTraxis.modal({
-                    url: '{{ path('admin_dlg_new_user') }}',
+                    url: '{{ path('admin_new_user') }}',
                     title: '{{ 'user.new'|trans }}',
                     success: function() {
                         $table.api().draw(false);
