--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -33,7 +33,7 @@
         // "Edit" button.
         $('#btn-edit').click(function() {
             eTraxis.modal({
-                url: '{{ path('admin_dlg_edit_project', {'id': project.id}) }}',
+                url: '{{ path('admin_edit_project', {'id': project.id}) }}',
                 title: '{{ project.name }}',
                 success: function() {
                     $(document).trigger('admin.project.edited', {{ project.id }});
