--- a/app/Resources/views/admin/templates/tab_details.html.twig
+++ b/app/Resources/views/admin/templates/tab_details.html.twig
@@ -42,7 +42,7 @@
         // "Edit" button.
         $('#btn-edit').click(function() {
             eTraxis.modal({
-                url: '{{ path('admin_dlg_edit_template', {'id': template.id}) }}',
+                url: '{{ path('admin_edit_template', {'id': template.id}) }}',
                 title: '{{ template.name }}',
                 success: function() {
                     $(document).trigger('admin.template.edited', {{ template.id }});
