--- a/app/Resources/views/admin/templates/tab_permissions.html.twig
+++ b/app/Resources/views/admin/templates/tab_permissions.html.twig
@@ -70,8 +70,8 @@
                 }
             });
 
-            $.post('{{ path('admin_save_template_permissions', {'id': template.id}) }}/' + group, {
-                permissions: permissions
+            $.post('{{ path('admin_save_template_permissions', {'id': template.id}) }}/' + group, { permissions }, function() {
+                eTraxis.alert('{{ 'permissions'|trans }}', '{{ 'changes.saved'|trans }}');
             });
         });
 
