--- a/app/Resources/public/less/etraxis-controls.less
+++ b/app/Resources/public/less/etraxis-controls.less
@@ -57,6 +57,10 @@ legend {
     padding: 0 5px;
 }
 
+p.caption {
+    text-align: left;
+}
+
 @media (max-width: 767px) {
     p.caption {
         font-weight: bold;
