--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -14,7 +14,7 @@
         <fieldset>
             {{ macro.row('project.name'|trans, project.name) }}
             {{ macro.row('project.start_time'|trans, project.createdAt|date('Y-m-d')) }}
-            {{ macro.row('project.status'|trans, project.suspended ? 'project.suspended'|trans : 'project.active'|trans) }}
+            {{ macro.row('project.status'|trans, project.suspended ? 'project.suspended'|trans|lower : 'project.active'|trans|lower) }}
             {{ macro.row('description'|trans, project.description) }}
         </fieldset>
     </div>
