--- a/app/Resources/views/admin/templates/tab_details.html.twig
+++ b/app/Resources/views/admin/templates/tab_details.html.twig
@@ -23,8 +23,8 @@
             {{ macro.row('template.critical_age'|trans, template.criticalAge) }}
             {{ macro.row('template.frozen_time'|trans, template.frozenTime) }}
             {{ macro.row('description'|trans, template.description) }}
-            {{ macro.row('template.guest_access'|trans, template.hasGuestAccess ? 'button.yes'|trans : 'button.no'|trans) }}
-            {{ macro.row('template.status'|trans, template.locked ? 'template.locked'|trans : 'template.active'|trans) }}
+            {{ macro.row('template.guest_access'|trans, template.hasGuestAccess ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
+            {{ macro.row('template.status'|trans, template.locked ? 'template.locked'|trans|lower : 'template.active'|trans|lower) }}
         </fieldset>
     </div>
 </div>
