--- a/app/Resources/views/web/security/forgot.html.twig
+++ b/app/Resources/views/web/security/forgot.html.twig
@@ -14,7 +14,7 @@
                         {{ form_label(form.username) }}:
                     </div>
                     <div class="grid-66">
-                        {{ form_widget(form.username, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'required' } }) }}
+                        {{ form_widget(form.username, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'field.required' } }) }}
                     </div>
                 </div>
 
