--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -14,7 +14,7 @@
                             <label for="username">{{ 'user.username'|trans }}:</label>
                         </div>
                         <div class="grid-66">
-                            <input class="grid-100 mobile-grid-100" type="text" id="username" name="_username" placeholder="{{ 'required'|trans }}" value="{{ last_username }}">
+                            <input class="grid-100 mobile-grid-100" type="text" id="username" name="_username" placeholder="{{ 'field.required'|trans }}" value="{{ last_username }}">
                         </div>
                     </div>
 
@@ -23,7 +23,7 @@
                             <label for="password">{{ 'user.password'|trans }}:</label>
                         </div>
                         <div class="grid-66">
-                            <input class="grid-100 mobile-grid-100" type="password" id="password" name="_password" placeholder="{{ 'required'|trans }}">
+                            <input class="grid-100 mobile-grid-100" type="password" id="password" name="_password" placeholder="{{ 'field.required'|trans }}">
                         </div>
                     </div>
 
