--- a/app/Resources/views/web/security/reset.html.twig
+++ b/app/Resources/views/web/security/reset.html.twig
@@ -14,7 +14,7 @@
                         {{ form_label(form.password) }}:
                     </div>
                     <div class="grid-66">
-                        {{ form_widget(form.password, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'required' } }) }}
+                        {{ form_widget(form.password, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'field.required' } }) }}
                     </div>
                 </div>
 
@@ -23,7 +23,7 @@
                         {{ form_label(form.confirmation) }}:
                     </div>
                     <div class="grid-66">
-                        {{ form_widget(form.confirmation, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'required' } }) }}
+                        {{ form_widget(form.confirmation, { attr: { class: 'grid-100 mobile-grid-100', placeholder: 'field.required' } }) }}
                     </div>
                 </div>
 
