--- a/app/Resources/views/admin/states/view.html.twig
+++ b/app/Resources/views/admin/states/view.html.twig
@@ -1,6 +1,8 @@
 <div class="tabs" id="tabs-state" data-tab="{{ tab }}">
     <ul>
         <li><a href="{{ path('admin_tab_state_details', {'id': state.id}) }}">{{ 'state'|trans }}</a></li>
-        <li><a href="{{ path('admin_tab_state_transitions', {'id': state.id}) }}">{{ 'state.transitions'|trans }}</a></li>
+        {% if (state.type != constant('eTraxis\\Entity\\State::TYPE_FINAL')) %}
+            <li><a href="{{ path('admin_tab_state_transitions', {'id': state.id}) }}">{{ 'state.transitions'|trans }}</a></li>
+        {% endif %}
     </ul>
 </div>
